--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,8 +1,10 @@
-height: 500
-menubar: false
-toolbar:
-  - styleselect | bold italic | undo redo
-  - image | link
-plugins:
-  - image
-  - link
+default: &default
+  plugins:
+    - image
+    - link
+
+alternate:
+  <<: *default
+  toolbar: styleselect | bold italic | undo redo | table
+  plugins:
+    - table
